# amplifier

./: AMPLIFIER_SYNTHESIS.md  CLAUDE.md  IMPLEMENTATION_SUMMARY.md  Makefile  NEXT_STEPS_AFTER_QUICKSTART.md  POST_QUICKSTART_DEMOS.md  README.generated.md  README.md  README_NEW.md  README_v2.md  VALUE_PROPOSITION.md  WORKSPACE_DASHBOARD_DESIGN_SPEC.md  docker-compose.yml  package-lock.json  pyproject.toml  repository_synthesis_original.md  test_session_selection.html
scenarios/doc_evergreen/: .gitignore  AI_ASSISTANT_WORKFLOW.md  COMMAND_FLOWS.md  IMPLEMENTATION_PLAN.md  PROGRESS.md  README.md  TEST_PLAN_E2E.md  VERSIONED_OUTPUT_FORMAT.md  pyproject.toml
scenarios/doc_evergreen/.doc-evergreen/file_summaries/: test__example__py.yaml
scenarios/doc_evergreen/doc_evergreen/: __init__.py  cli.py
scenarios/doc_evergreen/doc_evergreen/commands/: __init__.py  create.py  regenerate.py
scenarios/doc_evergreen/doc_evergreen/core/: __init__.py  discovery.py  doc_logger.py  generator.py  history.py  project.py  relevancy.py  source_mapping.py  summaries.py  template.py  versioning.py
scenarios/doc_evergreen/doc_evergreen/prompts/: ARCHITECTURE.md  README.md  __init__.py  create_customized_template.json  generate_document.json  score_relevancy.json  summarize_file.json
scenarios/doc_evergreen/doc_evergreen/templates/: api-reference.md  developer-guide.md  readme.md  template_guide.json  user-guide.md
scenarios/doc_evergreen/tests/: __init__.py  test_discovery.py  test_generator.py  test_history.py  test_prompts.py  test_regenerate.py  test_relevancy.py  test_source_mapping.py  test_summaries.py  test_template.py  test_versioning.py
scenarios/doc_studio/: .gitignore  ARCHITECTURE.md  DEVELOPMENT_LOG.md  IMPLEMENTATION_PLAN.md  Makefile  README.md  pyproject.toml  pyrightconfig.json
scenarios/doc_studio/doc_studio/: __init__.py  server.py
scenarios/doc_studio/doc_studio/api/: __init__.py  routes.py  sse.py
scenarios/doc_studio/doc_studio/models/: __init__.py  (+2 more)
scenarios/doc_studio/frontend/: index.html  package-lock.json  package.json
workspace-dashboard-api/: main.py  pyproject.toml
workspace-dashboard-api/app/: config.py  git_ops.py  main.py
workspace-dashboard-api/data/: layouts.json  sessions.json
workspace-dashboard-backend/: .dockerignore  Dockerfile  __init__.py  claude_integration.py  entities.py  file_watcher.py  layouts.json  main.py  main_new.py  migrate_data.py  pyproject.toml  requirements.txt  session_state.py  sse_manager.py
workspace-dashboard-backend/data/: projects.json  tasks.json
workspace-dashboard-backend/session_outputs/f34f0b5c-aea1-4b70-b77c-2c035861d6dd/: config.json
workspace-dashboard-backend/sessions/: sessions.json
(+206 files in other folders)
