[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "workspace-dashboard-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
    "watchdog>=3.0.0",
    "aiofiles>=23.0.0",
    "python-multipart>=0.0.6",
    "sse-starlette>=1.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.black]
line-length = 120
target-version = ["py311"]

[tool.hatch.build.targets.wheel]
packages = ["."]