[project]
name = "doc-studio"
version = "0.1.0"
description = "AI-amplified interactive workspace for documentation generation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "anthropic>=0.21.0",
    "python-multipart>=0.0.6",
    "sse-starlette>=1.8.2",
    "doc-evergreen",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
    "pyright>=1.1.350",
    "ruff>=0.2.0",
]

[tool.uv.sources]
doc-evergreen = { path = "../doc_evergreen" }
